# cuda_mandelbrot

./: CMakeLists.txt  README.md
include/: common.h  cuda_mandelbrot.h  mandelbrot.h  window.h
src/: main.c  mandelbrot.c  mandelbrot.cu  window.c
